<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="5dp"
    tools:context=".Connectivity"
    tools:deviceIds="wear">

    <LinearLayout
        android:id="@+id/linearLayout_"
        android:orientation="vertical"
        android:gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/connect_main"
            android:textSize="16sp"
            android:text="@string/warning_connectivity_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/connect_main2"
            android:textSize="14sp"
            android:textColor="@color/dark_red"
            android:textStyle="bold"
            android:layout_marginTop="2dp"
            android:text="@string/warning_connectivity_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/selection_1"
            android:layout_width="match_parent"
            android:text="@string/warning_connectivity_3"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/selection_2"
            android:text="@string/warning_connectivity_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.wear.widget.BoxInsetLayout>