<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".MainActivity"
    tools:deviceIds="wear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/inner_frame_layout_padding">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#28D0ED"
            android:text="@string/Main_Title" />

        <EditText
            android:id="@+id/edit_text_Username"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#4CAF50"
            android:hint="@string/Username" />

        <EditText
            android:id="@+id/edit_text_Password"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#4CAF50"
            android:hint="@string/Password" />

        <TextView
            android:id="@+id/text_view_warn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="#FF0000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:text="@string/save_pwd" />

            <Button
                android:id="@+id/bt_Connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Connect"
                android:layout_gravity="center"/>

        </LinearLayout>
    </LinearLayout>

</androidx.wear.widget.BoxInsetLayout>