<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".ActivityTwo"
    tools:deviceIds="wear">

    <LinearLayout
        android:id="@+id/userprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/view_main"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#03A9F4"
            android:text="@string/p_id"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/view_show_user"
            android:layout_marginStart="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#4CAF50" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_second"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="2dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/server_addr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#4CAF50"
            android:hint="@string/server_address"/>

        <EditText
            android:id="@+id/server_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#4CAF50"
            android:inputType="numberDecimal"
            android:hint="@string/server_port"/>

        <TextView
            android:id="@+id/show_err_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:textAlignment="center">

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:text="@string/save_pwd" />

            <Button
                android:id="@+id/button_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/test_connection" />

        </LinearLayout>

    </LinearLayout>


</androidx.wear.widget.BoxInsetLayout>